--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Pagina JavaScript</title>
     <!-- Required meta tags -->
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -26,9 +26,9 @@
     <button class="btn bg-white" onclick="area()">Picame para saber el area</button>
     </div>
 
-    <script type="text/javascript" src="../JS/function.js"></script>
-    <script src="../JS/script1.js"></script>
-    <script src="../JS/script2.js"></script>
+    <script type="text/javascript" src="../js/function.js"></script>
+    <script src="../js/script1.js"></script>
+    <script src="../js//script2.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
